--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,15 +12,16 @@
 <header class="headbar">
     <h1>Automation Service</h1>
     <nav class="header-nav">
-        <a href="#" class="header-btn">Config</a>
+        <a href="config.html" class="header-btn">Config</a>
         <a href="#" class="header-btn">Home</a>
     </nav>
 </header>
 <main class="main-panel">
-    <label for="start-button">点击按钮启动自动化服务</label>
+    <label for="start-button">请务必先点击右上角的Config文件配置文件的路径 再点击按钮启动自动化服务</label>
     <button id="start-button">启动服务</button>
+    <div id="log-container"></div>
 </main>
-<script src="script.js"></script>
+<script src="script.js?v=1.1"></script>
 </body>
 
 </html>
